# DAP

./: CMakeLists.txt  basic-config.h  dap.cpp  key.cpp  keystore.cpp  util.cpp  util.h
bash scripts/: install-libsodium.sh
consensus/: CMakeLists.txt
crypto/: CMakeLists.txt
depends/: CMakeLists.txt
primitives/: transaction.h
script/: CMakeLists.txt
snark/: CMakeLists.txt
snark/libsnark/common/default_types/: ec_pp.hpp  r1cs_ppzksnark_pp.hpp
support/: CMakeLists.txt
zcash/: CMakeLists.txt  CreateJoinSplit.cpp  JoinSplit.cpp
